--- a/Home/templates/Home/Bio.html
+++ b/Home/templates/Home/Bio.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block links %}
-<link rel="stylesheet" href="css/blog.css">
-<script src="js/jqueryscript.js"></script>
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+<script src="{% static 'js/jqueryscript.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -136,5 +136,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="js/blog.js"></script>
+<script src="{% static 'js/blog.js' %}"></script>
 {% endblock %}
